[package]
name = "kermit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
